[version 3.2.5] added copy button, updated download button ui, fixed bug where long strings would cause the text to overflow off the page

--- a/frontend/src/editor.css
+++ b/frontend/src/editor.css
@@ -61,6 +61,7 @@
 
 .md-preview p {
   margin: 1em 0;
+  overflow-wrap: anywhere;
 }
 
 .md-preview code:not(pre > code) {
